# audioapi-client

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tslint.json
.github/workflow/: build.yml
.github/workflows/: build.yml
node/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
node/src/: DownloadTask.ts
python/: api.py  download.py  main.py  mypy.ini  noxfile.py  pyproject.toml  tester.py
python/audioapi_client/: api.py  api_test.py  download.py  main.py  main_test.py
python/src/: api.py  download.py
src/: DownloadTask.ts  StreamDownloadTask.ts  download.ts  lib.ts
