[tool.poetry]
name = "audioapi-client"
version = "0.1.0"
description = "Client for Audio API"
authors = ["kaklakariada <kaklakariada@users.noreply.github.com>"]
license = "GPL"
readme = "../README.md"
packages = [{include = "audioapi_client"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.10"
types-tqdm = "^4.66.0.3"
mypy = "^1.6.1"
black = "^24.3.0"
nox = "^2023.4.22"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download = "audioapi_client.main:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
verbose = false
extend-exclude = 'audioapi_client/config\.py'

[tool.isort]
profile = "black"
#force_grid_wrap = 2

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
